# molina

./: .gitignore  Cargo.toml  README.md  backup.txt  pyproject.toml
docs/: README.md
knowledge/: README.md  source_catalog.json
molina/: Cargo.toml
molina/src/: main.rs
python/: requirements-dev.txt
python/examples/: chroma_langchain.py  extract_content.py  llama_test.py  ner.py  rag_langchain.py
python/molina/: main.py
python/molina/content/: documents.py  vector.py
python/molina/generators/: gpt4all.py  llama.py
rust/: Cargo.toml  rustfmt.toml
rust/examples/: extract_content.rs  parse_pdf.rs
rust/src/: lib.rs
rust/src/content/: README.md  extract.rs  filter.rs  mod.rs  parse.rs  process.rs  tokenize.rs
rust/src/data/: README.md  loader.rs  mod.rs
rust/src/inference/: README.md  llama.rs  mod.rs
rust/src/messages/: README.md  errors.rs
rust/tests/: pyo3_integration.rs
src/: lib.rs
src/content/: parse.rs
src/inference/: llama.rs
