[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "molina"
exclude = [".git/**", ".github/**"]

# [project]
# name = "molina"
# dependencies = ["toml", "transformers", 
#                 "accelerate","bitsandbytes", "SentecePiece", "protobuf", "torch"]
# requires-python = ">=3.10"
# keywords = ["llm", "rust"]
# classifier = [
#    "Development Status :: 2 - Pre-Alpha",
#    "Intended Audience :: Developers",
#    "License :: OSI Approved :: Apache Software License",
#    "License :: OSI Approved",
#    "Operating System :: MacOS",
#    "Operating System :: Microsoft :: Windows",
#    "Operating System :: POSIX :: Linux",
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.10",
#    "Programming Language :: Python",
#    "Programming Language :: Rust",
#]

