[package]
name = "molina"
version = "0.0.1"
edition = "2021"
description = "Rust/Python Synthetic Integration for an agentic-LLM approach to build a research agents for local knowledge representation"

authors = ["IteraLabs.ai <contact@iteralabs.ai>"]
license = "Apache-2.0"
keywords = ["machine-learning", "framework", "nlp", "llm", "rag"]
categories = ["development-tools", "simulation"]
documentation = "https://docs.rs/molina/"
repository = "https://github.com/iteralabs/molina"

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
lopdf = { version = "0.34.0", default-features = true }
rayon = { version = "1.6"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0.64" }

[lib]
name = "molina"
crate-type = ["cdylib"]
test = true
doctest = true

# include = ["~/git/iteralabs/molina/knowledge/case_1/"]
include = ["~/git/iteralabs/molina",
           "~/git/iteralabs/molina/rust",
           "~/git/iteralabs/molina/rust/examples"]

